force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__GameParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GameParticipantId__c</fullName>
    <label>Game Participant</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GameParticipantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>