force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__IssuedRewardId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuedRewardId__c</fullName>
    <label>Issued Reward</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuedRewardId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>