force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__rel_1729227464383_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227464383_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameParticipantReward_GameRewardId_m_rel</label>
    <referenceTo>ssot__GameReward__dlm</referenceTo>
    <relationshipLabel>GameParticipantReward_GameRewardId_m_rel</relationshipLabel>
    <relationshipName>rel_1729227464383_end</relationshipName>
    <type>Lookup</type>
</CustomField>