force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__rel_1729832109561_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832109561_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameParticipantReward_SourceActivity_rel</label>
    <referenceTo>ssot__LoyaltyTransactionJournal__dlm</referenceTo>
    <relationshipLabel>GameParticipantReward_SourceActivity_rel</relationshipLabel>
    <relationshipName>rel_1729832109561_end</relationshipName>
    <type>Lookup</type>
</CustomField>