force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__SourceActivityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceActivityId__c</fullName>
    <label>Source Activity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceActivityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>