force-app/main/default/objects/ssot__GameParticipantReward__dlm/fields/ssot__SourceActivityObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceActivityObject__c</fullName>
    <label>Source Activity Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceActivityObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>